# ai_unified_radar

./: .gitattributes  .gitignore  README.md
agentlens/: CHANGELOG-B2.md  CHANGELOG-B3.md  CHANGELOG-B4.md  CHANGELOG-attribution.md  CHANGELOG-audit.md  README-B2.md  README-B3.md  README-EXTRACTORS.md  TESTING-live.md  pyproject.toml  validate_credentials.py
agentlens/adf/: AgentLens_Daily.pipeline.json
agentlens/docs/adr/: README.md  adr-001-batch-over-streaming.md  adr-002-parquet-on-adls-gen2.md  adr-003-agent-as-minimum-control-unit.md  adr-004-cross-cloud-transfer-s3-to-adls.md  adr-005-purview-as-compliance-source-of-truth.md  (+4 more)
agentlens/extractors/: base.py  bedrock_cost.py  bedrock_invocations.py  bedrock_metrics.py  bedrock_traces.py  catalog.py  foundry_cost.py  foundry_metrics.py  foundry_traces.py  m365_registry.py  m365_usage.py  m365_user_activity.py  purview_audit.py  purview_dspm.py  run.py
agentlens/powerbi/: README.md  agentlens_measures.tmdl
agentlens/schemas/: base.py  bedrock_cost.py  bedrock_invocations.py  bedrock_metrics.py  bedrock_traces.py  foundry_cost.py  foundry_metrics.py  foundry_traces.py  m365_registry.py  m365_usage.py  m365_user_activity.py  purview_audit.py  purview_dspm.py
agentlens/star/: Fetch-M365AgentDetails.ps1  agentlens_schema_pg.sql  agentlens_star_schema.sql  backfill_audit_graph.py  backfill_prompts.py  build_star.py  build_star_pg.py  discover_foundry_traces.py  probe_caller.py  sync_raw.py
agentlens/tests/: conftest.py  test_base_extractor_fixtures.py  test_core_steps.py  test_extractors_fixtures.py  test_m365_registry.py  test_m365_usage.py
(+28 files in other folders)
